v0.32 + word-break on content links to prevent overflow x

--- a/styles/style.css
+++ b/styles/style.css
@@ -1636,6 +1636,12 @@ hr {
   padding: revert;
 }
 
+/* Prevent overflow x of long pasted links */
+
+#content a {
+  word-break: break-word;
+}
+
 /* FOOTNOTES BLOCK */
 
 #content ol.wp-block-footnotes {
